# apps/backend/src/main/java/com/candidateupskill/backend/platform/operation/domain/OperationType.java
@@ -1,0 +1,5 @@
+package com.candidateupskill.backend.platform.operation.domain;
+
+public enum OperationType {
+	RESUME_PARSE
+}
